--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,3 +1,22 @@
 project:
   type: website
   output-dir: docs
+
+website: 
+  page-footer:
+    background: dark
+    left: "Ayomide Akinwande. September, 2022"
+    right: 
+      - icon: journal-code
+        href: https://github/notebook.com
+      - icon: github
+        href: https://github.com
+      - icon: twitter
+        href: https://twitter.com
+
+format: 
+  html:
+    theme: materia
+    
+execute:
+  echo: false
